# stc

./: .gitignore  README.md  ast.ml  balanced.ml  balanced.mli  check.ml  check.mli  dune  dune-project  interpreter.ml  interpreter.mli  lexer.mll  loc.ml  main.ml  parse.ml  parse.mli  parser.mly  pretty.ml  pretty.mli  subtype.ml  subtype.mli  type_graph.ml  type_graph.mli  utils.ml  utils.mli  wellformed.ml  wellformed.mli
examples/: calculator.stc  comments_test.stc  dice_game.stc  dune  example.stc  nondeterministic.stc  parallel.stc  rock_paper_scissors.stc  simple_protocol.stc  twobuyer.stc  type_check_example.ml  typed_protocol.stc
test/: dune  test_balanced.ml  test_check.ml  test_interpreter.ml  test_parser.ml  test_subtype.ml  test_type_graph.ml  test_wellformed.ml
vscode-extension/: .vscodeignore  CHANGELOG.md  INSTALL.md  README.md  install-cursor.sh  install.sh  language-configuration.json  package.json  test-highlight.stc
vscode-extension/syntaxes/: stc.tmLanguage.json
