(test
 (name test_parser)
 (modules test_parser)
 (libraries stc alcotest))

(test
 (name test_wellformed)
 (modules test_wellformed)
 (libraries stc alcotest))

(test
 (name test_interpreter)
 (modules test_interpreter)
 (libraries stc alcotest unix))

(test
 (name test_check)
 (modules test_check)
 (libraries stc alcotest))

(test
 (name test_subtype)
 (modules test_subtype)
 (libraries stc alcotest))

(test
 (name test_balanced)
 (modules test_balanced)
 (libraries stc alcotest))
